--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,12 +33,16 @@ services:
     restart: unless-stopped
 
   mongo:
-    image: mongo
+    image: arm64v8/mongo:4.4.8
     container_name: mongo
-    restart: always
+    #restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    volumes: 
+      - mongo_data:/data/db
+
 
 volumes:
   postgres_data:
+  mongo_data:
