--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
   edt:
     image: ghcr.io/linuxserver/code-server
     container_name: code-server
+    restart: always
     environment:
       - PUID=1000
       - PGID=1000
@@ -31,19 +32,17 @@ services:
     ports:
       - 8445:8443
       - 3030:3000
-    restart: unless-stopped
 
-  mongo:
-    image: arm64v8/mongo:4.4.8
-    container_name: mongo
-    #restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    volumes: 
-      - mongo_data:/data/db
-
+#  mongo:
+#    image: arm64v8/mongo:4.4.8
+#    container_name: mongo
+#    restart: always
+#    environment:
+#      MONGO_INITDB_ROOT_USERNAME: root
+#      MONGO_INITDB_ROOT_PASSWORD: example
+#    volumes: 
+#      - mongo_data:/data/db
 
 volumes:
-#  postgres_data:
-  mongo_data:
+  postgres_data:
+#  mongo_data:
